<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity" >

    <ImageView
        android:id="@+id/top_image"
        style="@style/top_image"
        android:src="@drawable/hungarymap" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:text="@string/welcome"/>

        <TextView
            android:id="@+id/sub_title"
            style="@style/sub_title"
            android:text="@string/welcome_two"/>

        <TextView
            android:id="@+id/question"
            style="@style/question"
            android:text="@string/player_name"/>

        <EditText
            android:id="@+id/player_name"
            style="@style/text_answer"
            android:hint="@string/name_hint"/>

        <Button
            android:id="@+id/submit"
            style="@style/submit"
            android:onClick="startQuiz"
            android:text="@string/submit"/>

    </RelativeLayout>

</LinearLayout>
